<resources>
    <string name="main_home">首页</string>
    <string name="main_order">订单</string>
    <string name="main_discovery">发现</string>
    <string name="main_mine">个人</string>
    <string name="app_name">卡煤利多</string>
    <string name="ceshihuanjing_bug">测试</string>
    <string name="ceshihuanjing_demo">模拟</string>
    <string name="pull_to_loadmore">上推加载...</string>
    <string name="pull_to_release">松开加载...</string>
    <string name="pull_to_loading">正在加载...</string>
    <string name="click_to_load">点击加载</string>
    <string name="down_msg">更新提示</string>
    <string name="myAtentionVenue">我的关注</string>
    <string name="setting">设置</string>
    <string name="youhuijuan">优惠券</string>
    <string name="myRest">我的余额</string>
    <string name="secure">帐号与安全</string>
    <string name="login">登录</string>
    <string name="phone">账号</string>
    <string name="pwd">密码</string>
    <string name="register">注册</string>
    <string name="register_phone">请填写注册手机号</string>
    <string name="register_pwd">设置密码,6—14位数字或字母</string>
    <string name="register_agreement">卡煤利多软件许可及服务协议</string>
    <string name="repeat_pwd">确认登录</string>
    <string name="verification">请输入短信验证码</string>
    <string name="bt_verification">获取验证码</string>
    <string name="agreed_register">同意协议并注册</string>
    <string name="repeat_loginfail">重置成功.</string>
    <string name="repeat_pwdmsg">重置密码成功,确认登录?</string>
    <string name="repeat_cancel">取消</string>
    <string name="invite_code">推荐人,没有可以不填</string>
    <string name="txt_getMsgCode_validate">获取验证码</string>
    <string name="retrieve">找回密码</string>
    <string name="phone_login">用手机验证码登录</string>
    <string name="customer">联系客服</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="codelogin_bt_login">重置密码</string>
    <string name="codelogin_bt_validation">获取验证码</string>
    <string name="checkbox_auto">自动登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="login_terms">点击上面的“登录”按钮,即表示您同意</string>
    <string name="register_terms">注册登录卡煤利多,即表示您同意</string>
    <string name="login_agreement">《软件许可及服务协议》</string>
    <string name="leftmenu_nickname">昵称</string>
    <string name="leftmenu_mobilephone">手机号码</string>
    <string name="tv_leftmenu_msg">我的消息</string>
    <string name="tv_leftmenu_wallet">我的钱包</string>
    <string name="iv_leftmenu_vehicle">我的车辆</string>
    <string name="tv_leftmenu_order">我的订单</string>
    <string name="tv_leftmenu_promote">我的推广</string>
    <string name="tv_leftmenu_focus">我的关注</string>
    <string name="tv_leftmenu_setting">我的设置</string>
    <string name="tv_leftmenu_help">我的帮助</string>
    <string name="realname">实名认证</string>
    <string name="driver">司机认证</string>
    <string name="addVehicle">添加车辆</string>
    <string name="enterprise">企业认证</string>
    <string name="phonenumber">手机号码</string>
    <string name="personal_nickname">昵称</string>
    <string name="personal_age">年龄层</string>
    <string name="selector_age">请选择您的年龄</string>
    <string name="personal_sexmsg">性别</string>
    <string name="selector_sex">请选择您的性别</string>
    <string name="personal_nickmsg">昵称</string>
    <string name="personal_et_nick">请输入您的昵称</string>
    <string name="namecertification_tv_msg">实名认证</string>
    <string name="tv_namecertification_prompt">在运费提现时需做验证,请谨慎填写</string>
    <string name="et_namecertification_name">请输入您的真实姓名</string>
    <string name="et_namecertification_idcard">请输入您的身份证号</string>
    <string name="et_enterprise_enterpriseName">请输入您企业全称</string>
    <string name="bt_namecertification_agreed">认证</string>
    <string name="tv_namecertification_asterisk">*</string>
    <string name="tv_namecertification_msgone">您已是认证用户,部分信息不能修改如有更改</string>
    <string name="tv_namecertification_customer">请联系客服</string>
    <string name="tv_namecertification_enterprise">如升级为企业用户,您可对企业产权车辆进行</string>
    <string name="tv_namecertification_management">抢单和结算管理,升级</string>
    <string name="tv_driving_name">请输入您的驾驶证姓名</string>
    <string name="et_driving_idcard">请输入您的身份证号码</string>
    <string name="tv_drivercertification_driverlicense">驾驶证</string>
    <string name="tv_drivercertification_time">请输入上传日期</string>
    <string name="tv_drivercertification_timemsg">日期:</string>
    <string name="tv_fastaddvehicle_surname">姓</string>
    <string name="tv_fastaddvehicle_name">名</string>
    <string name="tv_fastaddvehicle_idcard">身份证号</string>
    <string name="tv_newvehicle_titlemsg">新增车辆</string>
    <string name="bt_newvehile_apply">申请</string>
    <string name="et_newvehile_inputcarlicense">请输入您的车牌号码</string>
    <string name="tv_newvehile_carlicense">车辆牌号</string>
    <string name="tv_newvehile_geichecall">跟车电话</string>
    <string name="tv_newvehile_xiugaicall">修改</string>
    <string name="tv_newvehile_cartype">车辆类型</string>
    <string name="et_newvehile_inputcartype">请输入您的车辆类型</string>
    <string name="tv_newvehile_enginenumber">发动机号</string>
    <string name="et_newvehile_inputenginenumber">请输入车辆发动机号</string>
    <string name="tv_newvehile_driverlicense">行驶证</string>
    <string name="tv_business_license">营业执照</string>
    <string name="tv_enterprise_attorney">授权书</string>
    <string name="tv_enterprise_idcode">手持身份证</string>
    <string name="tv_newvehile_blacklicense">运营证</string>
    <string name="tv_newvehicle_insuranceimg">车辆照片</string>
    <string name="tv_newvehicle_chongxin">认证</string>
    <string name="tv_startnewvehicle_carnumber">车牌号码</string>
    <string name="vehicle_changePhoto">更换照片</string>
    <string name="vehicle_changePhoto_error">照片不完整，审核未通过受理</string>
    <string name="vehicle_list">车辆列表</string>
    <string name="vehicle_msg">车辆信息</string>
    <string name="et_startnewvehicle_inputcarnumber">输入新增车辆的车牌号码</string>
    <string name="et_startnewvehicle_inputcarcall">请输入11位手机号</string>
    <string name="vehicle_personal">个人产权车辆</string>
    <string name="vehicle_enterprise">企业产权车辆</string>
    <string name="vehicle_upload_picture_shenfenzheng">请务必按照示例图上传，四角对齐，信息完整，如模糊、反光、太暗、有遮挡，则不予认证</string>
    <string name="vehicle_upload_picture_cheliang">请严格按照示例图，横着拍，带完整车牌的实车照片，并在车辆周围适当留空</string>
    <string name="vehicle_addPersonalMsgOne">请保持身份证/驾驶证和行驶证上所属人信息一致</string>
    <string name="vehicle_addCompanyMsgOne">请保持加盖公章的营业执照和行驶证的所有人一致</string>
    <string name="vehicle_addPersonalMsgTwo">请保证上传的图片清晰和无遮挡</string>
    <string name="vehicle_addPersonalMsgThree">请保证上传的资料真实有效</string>
    <string name="bt_startnewvehicle_nextstep">下一步</string>
    <string name="bt_upload_picture_pai">拍摄照片</string>
    <string name="bt_upload_picture_choose">选择照片</string>
    <string name="fl_ll_loading">正在刷新数据请稍后....</string>
    <string name="no">取消</string>
    <string name="title">车辆类型</string>
    <string name="item_popupwindows_six">60后</string>
    <string name="item_popupwindows_seven">70后</string>
    <string name="item_popupwindows_eigh">80后</string>
    <string name="item_popupwindows_nine">90后</string>
    <string name="item_popupwindows_cancel">取消</string>
    <string name="item_popupwindows_age">请选择年龄</string>
    <string name="item_popupwindows_sex">请选择性别</string>
    <string name="item_popupwindows_man">男</string>
    <string name="item_popupwindows_female">女</string>
    <string name="item_popupwindows_drivermsg">请上传驾驶证[黑本]</string>
    <string name="item_popupwindows_driverphoto">拍照</string>
    <string name="item_popupwindows_driverselect">选择照片</string>
    <string name="item_popupwindows_drivercancel">取消</string>
    <string name="tv_carinputcode_promptinfo">车牌号码晋A12345已注册车主是孙老板,电话12345678901请联系车主获取验证码</string>
    <string name="et_carinputcode_invitationcode">输入邀请码</string>
    <string name="bt_carinputcode_validation">申请</string>
    <string name="btn_carinputcode_validation">验证</string>
    <string name="item_popupwindows_drivingmsg">请上传行驶证[蓝本]</string>
    <string name="item_popupwindows_operatingmsg">请上传运营证</string>
    <string name="item_popupwindows_insuranceimgmsg">请上传车辆照片</string>
    <string name="carlist_addmycar">添加我的车辆</string>
    <string name="carlist_inputnumber">输入邀请码　</string>
    <string name="rb_carlist_basic">基本信息</string>
    <string name="rb_carlist_drivermsg">司机信息</string>
    <string name="tv_carbasic_applyforstatus">申请状态</string>
    <string name="bt_carbasic_deletecar">删除车辆</string>
    <string name="tv_carbasic_blueprint">[蓝本]</string>
    <string name="driver_UserPhoneMsg">手机号:</string>
    <string name="tv_carputcode_promptinfo">邀请码在您收到的短信或微信邀请中</string>
    <string name="et_carputcode_invitationcode">输入邀请码成为司机</string>
    <string name="tv_carputcode_undermsg">注:此处要求必须为认证司机,才能通过此功能加车</string>
    <string name="tv_drivermsg_entire">可对运单进行全程执行</string>
    <string name="tv_drivermsg_perform">执行</string>
    <string name="tv_drivermsg_Withdraw">可对运费进行提现操作</string>
    <string name="tv_drivermsg_settlement">结算</string>
    <string name="tv_drivermsg_systemOrder">可在系统内完成接单</string>
    <string name="tv_drivermsg_titlemsg">司机信息</string>
    <string name="tv_drivermsg_save">保存</string>
    <string name="bt_drivermsg_delete">删除司机</string>
    <string name="cb_drivermsg_default">设为默认司机</string>
    <string name="tv_sendcode_msg">发送您的邀请码,推荐好友下载“卡煤利多”赶快来和大家一起来分享货运乐趣吧!并且还可各得30元奖励,不会泄露您的隐私.奖励封顶3000元</string>
    <string name="bt_sendcode_invitation">马上邀请</string>
    <string name="rb_selectroute_attention">我的关注</string>
    <string name="rb_selectroute_routes">所有路线</string>
    <string name="route_provenance">始发地</string>
    <string name="route_destination">目的地</string>
    <string name="reset_testView_getcode">本次操作需要短信确认,点击获取验证码,验</string>
    <string name="reset_testView2_getcode">证码将发送至您的135****4562。</string>
    <string name="reset_click_getcode">获取验证码</string>
    <string name="order_first_attention">关注优先</string>
    <string name="order_first_city">同城优先</string>
    <string name="order_price_sort">价格排序</string>
    <string name="sure">确定</string>
    <string name="myticket_executiveOrders">是否开始执行订单</string>
    <string name="wait_change_ticket">待换票</string>
    <string name="wait_shipment">待装运</string>
    <string name="wait_receive">待收货</string>
    <string name="wait_check">待审核</string>
    <string name="wait_settlement">已结算</string>
    <string name="wait_all">全部</string>
    <string name="mine_task_award_pop1">卡煤利多</string>
    <string name="mine_task_award_pop2">新手任务活动规则</string>
    <string name="mine_task_award_pop3">1、针对不通情况下用户注册，平台给予不同的现金奖励;</string>
    <string name="mine_recommend_award_pop1">1、邀请人奖励：奖励金额：40元;</string>
    <string name="mine_recommend_award_pop2">2、奖励条件:</string>
    <string name="mine_recommend_award_pop3">A、邀请人将生成的邀请码发给被邀请车主，车主在满足车辆认证条件下，填写邀请码，并通过平台审核，邀请人可奖励：10元。</string>
    <string name="mine_recommend_award_pop4">B、被邀请车主已注册车辆完成首次承运，邀请人奖励：30元。</string>
    <string name="mine_recommend_award_pop5">注：针对同一车主名下有多辆车的情况，平台只针对首次注册的第一辆车做承运奖励，后续添加的车辆，完成承运，不做重复奖励。</string>
    <string name="mine_task_award_pop4">2、车主（新车）奖励：奖励金额：60元;</string>
    <string name="mine_task_award_pop5">3、奖励条件:</string>
    <string name="mine_task_award_pop6">A、用自己的手机注册，并上传个人、车辆资料，且平台审核通过，奖励10元。</string>
    <string name="mine_task_award_pop7">B、车主已上传每辆车辆完成首次承运，奖励20元。</string>
    <string name="mine_task_award_pop8">C、车主完成二次承运，奖励30元。</string>
    <string name="btn_next">下一步</string>
    <string name="employer_activity_current_ticket_all">全部运单</string>
    <string name="employer_activity_current_ticket_qianshou">待收货运单</string>
    <string name="employer_activity_current_ticket_check">待结算运单</string>
    <string name="employer_activity_current_ticket_history">已结算运单</string>
    <string name="tv_yan_zheng_ma_tip">本操作需要短信验证，点击获取验证码</string>
    <string name="tv_get_tip">请注意查收！</string>
    <string name="_yan_zheng_ma_hint">请输入验证码</string>
    <string name="tv_message_tip">验证码将发送至您的手机号:</string>
    <string name="tv_is_logout">退出当前账号？</string>
    <string name="tv_is_logout_tip">退出后将无法享受物流平台的优质服务</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_sure">确定退出</string>
    <string name="tb_yan_zheng_ma">获取验证码</string>
</resources>