<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1" >

    <TextView
        android:id="@+id/tv_yan_zheng_ma_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_yan_zheng_ma_tip"
        android:textColor="#666666"
        android:textSize="16sp" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_message_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_yan_zheng_ma_tip"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_message_tip"
        android:textColor="#666666"
        android:textSize="16sp"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_get_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_message_tip"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_get_tip"
        android:textColor="#666666"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_get_tip"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="54dp"
        android:background="#E1E1E1"
        android:gravity="center_vertical" 
        android:paddingRight="5dp"
        android:paddingLeft="10dp">

        <EditText
            android:id="@+id/et_yan_zheng_ma"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="7"
            android:background="#00000000"
            android:hint="@string/_yan_zheng_ma_hint"
            android:inputType="number"/>

        <com.yunqi.clientandroid.view.TimeButton
            android:id="@+id/tb_yan_zheng_ma"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:text="@string/tb_yan_zheng_ma"
            android:background="#229EEE"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="#229EEE"
        android:text="@string/btn_next"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</RelativeLayout>