<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/ll_task_award"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/rl_task_award"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/renwukaiqi"
        android:layout_centerInParent="true">
        <TextView 
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_15"
            android:textSize="18sp"
            android:textColor="#333"
            android:layout_centerHorizontal="true"
            android:text="@string/mine_task_award_pop1"/>
        <TextView 
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_1"
            android:layout_marginTop="@dimen/space_10"
            android:textSize="15sp"
            android:textColor="#333"
            android:layout_centerHorizontal="true"
            android:text="@string/mine_task_award_pop2"/>
        <TextView 
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_1"
            android:layout_marginTop="@dimen/space_50"
            android:layout_marginLeft="@dimen/space_30"
            android:layout_marginRight="@dimen/space_30"
            android:textSize="13sp"
            android:textColor="#333"
            android:text="@string/mine_task_award_pop3"/>
        <TextView 
            android:id="@+id/tv_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_3"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginLeft="@dimen/space_30"
            android:layout_marginRight="@dimen/space_30"
            android:textSize="13sp"
            android:textColor="#333"
            android:text="@string/mine_task_award_pop4"/>
        <TextView 
            android:id="@+id/tv_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_4"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginLeft="@dimen/space_30"
            android:layout_marginRight="@dimen/space_30"
            android:textSize="13sp"
            android:textColor="#333"
            android:text="@string/mine_task_award_pop5"/>
        <TextView 
            android:id="@+id/tv_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_5"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginLeft="@dimen/space_38"
            android:layout_marginRight="@dimen/space_30"
            android:textSize="13sp"
            android:textColor="#333"
            android:text="@string/mine_task_award_pop6"/>
        <TextView 
            android:id="@+id/tv_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_6"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginLeft="@dimen/space_38"
            android:layout_marginRight="@dimen/space_30"
            android:textSize="13sp"
            android:textColor="#333"
            android:text="@string/mine_task_award_pop7"/>
        <TextView 
            android:id="@+id/tv_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_7"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginLeft="@dimen/space_38"
            android:layout_marginRight="@dimen/space_30"
            android:textSize="13sp"
            android:textColor="#333"
            android:text="@string/mine_task_award_pop8"/>
    </RelativeLayout>

</RelativeLayout>
