<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/space_8"
                android:background="@color/order_popu_backround"
        >
    <LinearLayout
            style="@style/order_popuwindow"
            >

        <TextView
                android:id="@+id/tv_attention_first"
                style="@style/order_popuwindow_text"
                android:text="@string/order_first_attention"
                />

        <TextView
                android:id="@+id/tv_city_first"
                style="@style/order_popuwindow_text"
                android:text="@string/order_first_city"
                />

        <TextView
                android:id="@+id/tv_price_sort"
                style="@style/order_popuwindow_text"
                android:text="@string/order_price_sort"
                />

    </LinearLayout>
</RelativeLayout>