<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView 
        android:id="@+id/reset_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_35"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/reset_testView_getcode"/>
    <TextView 
        android:id="@+id/reset_textView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:layout_alignLeft="@+id/reset_textView"
        android:layout_below="@+id/reset_textView"
        android:textSize="15sp"
        android:text="@string/reset_testView2_getcode"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_textView_phone"
        android:layout_marginTop="@dimen/space_30"
        android:layout_alignLeft="@+id/reset_textView"
        android:layout_alignRight="@+id/reset_textView"
        android:background="#dfdfdf">
        <EditText 
            android:id="@+id/et_input_getCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:layout_height="match_parent"
            android:padding="@dimen/space_15"
            android:hint="输入验证码"/>
        
        <TextView 
            android:id="@+id/tv_click_getCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/reset_click_getcode"
            android:textColor="@color/customRed"
            />
    </LinearLayout>
    <Button 
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/textWithRed"
        android:text="@string/bt_startnewvehicle_nextstep"
        android:background="@color/color_229AEE"/>

</RelativeLayout>
